#501 Fixed code smells and warning for: MainGameOrderTicketDisplayTest.java